samples/_failures_safe/1761720414_b4ae8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28e76c88.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_28e76c88.c:136:37: error: expected ‘)’ at end of input
  136 |         if (strcmp(analyzer->entries
      |                   ~                 ^
      |                                     )
./samples/SAFE/__tmp_28e76c88.c:136:13: error: too few arguments to function ‘strcmp’
  136 |         if (strcmp(analyzer->entries
      |             ^~~~~~
In file included from ./samples/SAFE/__tmp_28e76c88.c:4:
/usr/include/string.h:156:12: note: declared here
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
./samples/SAFE/__tmp_28e76c88.c:136:9: error: expected declaration or statement at end of input
  136 |         if (strcmp(analyzer->entries
      |         ^~
./samples/SAFE/__tmp_28e76c88.c:136:9: error: expected declaration or statement at end of input
